# fundica-application-form-completion

./: .gitignore  2025-11-10_input.jsonl.out  KB_retrieval.py  README.md  batch_inf.py  enriched_text.txt  metadata_creation.py  pyproject.toml  requirements.txt  scratch.py  stepfunction_test_input.json  transcript.txt
aws_helpers/: helpers.py  requirements.txt  utils.py
form-application-poc/src/: App.css  App.js
fundica-cdk/infra/lib/: infra-stack.ts
fundica-cdk/local-files/master/: application_writing_prompt.md  application_writing_prompt.txt  generate_questions_prompt.txt
fundica-cdk/services/lambdas/: application_completion_lambda.py  application_trigger_lambda.py  kb_sync_lambda.py  metadata_creation_lambda.py  question_generation_lambda.py
fundica-cdk/services/lambdas/application-completion-lambda/: Dockerfile  application_completion_lambda.py  requirements.txt
fundica-cdk/services/lambdas/pypandoc-lambda/: Dockerfile  md_to_doc_lambda.py
prompts/: CanExport Application Form_application_writing_prompt.txt
pypandoc-lambda/: Dockerfile  lambda_txt_to_doc.py  requirements.txt
services/lambdas/: lambda_application_completion.py  lambda_kb_sync.py  lambda_metadata_generation.py
